# bookstore1

./: db.sqlite3  pyproject.toml
bookstore/: settings.py
order/migrations/: 0001_initial.py
order/models/: order.py  product.py
order/serializer/: order_serializer.py
order/tests/: factories.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py  0002_rename_name_category_title_category_active_and_more.py
product/models/: category.py  product.py
product/models/serializers/: product_serializer.py
product/serializer/: product_serializer.py
product/serializers/: __init__.py  product_serializer.py
product/tests/: factories.py  test_models.py  test_product.py  test_serial.py
product/tests/test_viewsets/: test_category_viewset.py
